# gtimer

./: .gitignore  AGENTS.md  ChangeLog.md  GEMINI.md  PRD.md  README.md  STATUS.md  USER_INTERFACE.md  meson.build  us.k5n.GTimer.flatpak.json
core/: db-manager.c  db-manager.h  idle-monitor.c  idle-monitor.h  meson.build  project-object.c  project-object.h  report-generator.c  report-generator.h  schema.h  task-list-model.c  task-list-model.h  task-object.c  task-object.h  timer-service.c  timer-service.h  timer-utils.c  timer-utils.h
data/: gtimer.gresource.xml  meson.build  style.css  us.k5n.GTimer.desktop  us.k5n.GTimer.gschema.xml  us.k5n.GTimer.metainfo.xml
po/: LINGUAS  POTFILES.in  cs.po  es.po  fr.po  gtimer.pot  meson.build  sv.po
src/: gtimer-window.c  gtimer-window.h  main.c  meson.build  report-window.c  report-window.h
tests/: meson.build  test-db.c  test-idle-init.c  test-main.c  test-model.c  test-service.c  test-utils.c
